--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <string name="app_name">Mobile-Essay1</string>
 <string name="title_home">Home</string>
 <string name="title_dashboard">Músicas</string>
-<string name="title_notifications">Notifications</string>
+<string name="title_notifications">Player</string>
 <string name="next">Next</string>
 <string name="previous">Previous</string>
 <string name="third">Third</string>
@@ -20,4 +20,5 @@
     </string>
 <!-- TODO: Remove or change this placeholder text -->
 <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="chill_a_bit">Chill a bit</string>
 </resources>
