adding musics and photos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <item>Relax</item>
     <item>Pop</item>
     <item>Rock</item>
-    <item>Estilo 4</item>
+    <item>Brasileira</item>
 </string-array>
 
 <string name="lorem_ipsum">
